--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,4 @@ install:
   - npm install
 
 script:
-  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - npm run test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
