--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,9 @@
-# dist: trusty
 dist: xenial
 # sudo: false -> deprecated
 
 language: node_js
 node_js:
   - '10'
-
-# addons:
-#   apt:
-#     sources:
-#       - google-chrome
-#     packages:
-#       - google-chrome-stable
 
 addons:
   chrome: stable
@@ -25,3 +17,12 @@ install:
 
 script:
   - npm run test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - npm run-script build
+  
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  local_dir: dist/AngularMaterial
+  on:
+    branch: master
