--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - npm install
 
 script:
-  - npm run test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  # - npm run test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
   - npm run-script build
   
 deploy:
